force-app/main/default/objects/AccountDuplicate__c/AccountDuplicate__c.object-meta.xml
<CustomObject>
    <label>Account Duplicate</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Duplicates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>