force-app/main/default/objects/AccountDuplicate__c/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Duplicates (Duplicate)</relationshipLabel>
    <relationshipName>Account_Duplicates1</relationshipName>
    <type>Lookup</type>
</CustomField>