force-app/main/default/objects/AccountDuplicate__c/fields/MainAcc__c.field-meta.xml
<CustomField>
    <fullName>MainAcc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Duplicates</relationshipLabel>
    <relationshipName>Account_Duplicates</relationshipName>
    <type>Lookup</type>
</CustomField>