force-app/main/default/objects/AccountDuplicate__c/fields/matchIndex__c.field-meta.xml
<CustomField>
    <fullName>matchIndex__c</fullName>
    <label>Match Index</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>