force-app/main/default/objects/AccountDuplicate__c/fields/OppsClosedWon__c.field-meta.xml
<CustomField>
    <fullName>OppsClosedWon__c</fullName>
    <formula>Duplicate__r.ClosedWonOpps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opps Closed Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>