force-app/main/default/objects/AccountDuplicate__c/fields/OppsCount__c.field-meta.xml
<CustomField>
    <fullName>OppsCount__c</fullName>
    <formula>Duplicate__r.OppsCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opps Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>