force-app/main/default/objects/AccountDuplicate__c/fields/OrdersCount__c.field-meta.xml
<CustomField>
    <fullName>OrdersCount__c</fullName>
    <formula>Duplicate__r.OrdersCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orders Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>