force-app/main/default/objects/AccountDuplicate__c/fields/Verdict__c.field-meta.xml
<CustomField>
    <fullName>Verdict__c</fullName>
    <formula>IF(
   AND(matchIndex__c&gt;=0.600, matchIndex__c&lt;0.800),
   &apos;MIDDLE MATCH&apos;,
     IF(
	   AND(matchIndex__c&gt;=0.800, matchIndex__c&lt;0.880),
	   &apos;HIGH MATCH&apos;,
	     IF(
	       AND(matchIndex__c&gt;=0.880, matchIndex__c&lt;0.950),
	       &apos;STRONG MATCH&apos;,
           IF(matchIndex__c&gt;=0.950,&apos;FULL MATCH&apos;,&apos;N/A&apos;) 		   
		 )
	 )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verdict</label>
    <type>Text</type>
</CustomField>